# corpussmith

./: .gitignore  BETA-TESTER-GUIDE.md  CHANGELOG.md  LICENSE  README.md  corpussmith.py  pyproject.toml  requirements.txt
corpussmith/: __init__.py  __main__.py  _legacy.py
corpussmith/app/: __init__.py  cli.py  onboarding.py
corpussmith/config/: __init__.py  global_config.py
corpussmith/exports/: __init__.py  bibtex.py  csljson.py  markdown.py
corpussmith/forge/: __init__.py
corpussmith/forge/readers/: __init__.py
corpussmith/harvest/: __init__.py
corpussmith/lexicons/: classics.json  music.json  mycology.json  neuroscience.json  philosophy.json  psychiatry.json
corpussmith/net/: __init__.py
corpussmith/premium/: __init__.py  atlas.py  book_pack.py  clusters.py  contradictions.py  memory_graph.py  search_draft.py  thesis_pack.py
corpussmith/projects/: __init__.py  config.py  report.py  workspace.py
corpussmith/provenance/: __init__.py
corpussmith/search/: __init__.py  brief.py  concept_cache.py  enrich.py  input_classifier.py  lexicon.py  mesh.py  query_expansion.py  query_plan.py  title_parser.py
corpussmith/sources/: __init__.py  base.py  registry.py  trust.py
corpussmith/tui/: __init__.py  banner.py  theme.py
corpussmith/utils/: __init__.py
site/: README.md  cli.html  features.html  index.html  install.html  pricing.html  sources.html  style.css
tests/: conftest.py  test_brief.py  test_cache_cli.py  test_concept_cache.py  test_enrich.py  test_exports.py  test_lexicon_precision.py  test_mesh.py  test_onboarding.py  test_premium.py  test_projects.py  test_query_expansion.py  test_site.py  test_smoke.py  test_trust.py  test_tui_banner.py
