[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "corpussmith"
version = "3.5.0-beta.1"
description = "Corpus Smith is a Python-based scholarly research workbench for building trusted research corpora, collecting academic sources, managing references, and preparing citation-ready research material."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Anastasios Papalias", email = "info@corpussmith.dev" }]
requires-python = ">=3.8"
keywords = [
  "research", "academic", "corpus", "citations", "bibliography",
  "literature-review", "python", "scholarly-tools",
  "openalex", "crossref", "arxiv", "pubmed", "zenodo"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Topic :: Scientific/Engineering",
  "Topic :: Text Processing :: Indexing",
]
dependencies = []

[project.optional-dependencies]
pdf      = ["pypdf>=3.0"]
docx     = ["python-docx>=1.0"]
security = ["defusedxml>=0.7"]
full     = ["pypdf>=3.0", "python-docx>=1.0", "defusedxml>=0.7"]
dev      = ["pytest>=7"]

[project.scripts]
corpussmith = "corpussmith.app.cli:main"

[project.urls]
Homepage   = "https://github.com/corpussmith/corpussmith"
Repository = "https://github.com/corpussmith/corpussmith"

[tool.setuptools.packages.find]
include = ["corpussmith*"]

[tool.setuptools.package-data]
corpussmith = ["lexicons/*.json"]
